--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "langchain>=0.3.14",
     "pypdf>=5.1.0",
     "pytest>=8.3.4",
+    "tqdm>=4.67.1",
     "warcio>=1.7.5",
 ]
