--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "docling>=2.15.1",
     "ipython>=8.31.0",
     "langchain>=0.3.14",
+    "meilisearch>=0.33.1",
     "pypdf>=5.1.0",
     "pytest>=8.3.4",
     "tqdm>=4.67.1",
